--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,31 @@
     padding: 0; 
 }
 
+body {
+    margin:0;
+    padding:0;
+    height:100%;
+ }
+ #container {
+    min-height:100%;
+    position:relative;
+ }
+ #header {
+    background: rgb(255, 224, 224);
+    padding:10px;
+ }
+ #body {
+    padding:10px;
+    padding-bottom:60px;   /* Height of the footer */
+ }
+ #footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:60px;   /* Height of the footer */
+    background:#6cf;
+ }
+
 h1 {
     font-family: 'Raleway', sans-serif;
     letter-spacing: 3px; 
@@ -42,8 +67,22 @@ h2 {
     font-family: Arial, Helvetica, sans-serif; 
 }
 
+.quote1 {
+    color: #F1AF77;
+    position: absolute; 
+    margin: 1em; 
+    font-size: 1.5em; 
+    font-family: Arial, Helvetica, sans-serif; 
+    padding-top: 100px; 
+}
 
-input {
+.username {
+    border-radius: 5px;  
+    margin-left: 20px; 
+    flex: 1; 
+}
+
+.password1 {
     border-radius: 5px;  
     margin-left: 20px; 
 }
@@ -52,8 +91,25 @@ input {
     margin-left: 2%; 
 }
 
-.button {
+button {
     float: left;
+    background: #B9DFFF;
+    color: #fff;
+    border: 1px solid #eee;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
+        
+}
+        
+button:hover {
+    background: rgb(17, 72, 114);
+    color: #fff;
+    border: 1px solid #eee;
+    border-radius: 20px;    
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
+
 }
 
 .bottom-left {
@@ -71,6 +127,14 @@ body {
     font-family: 'Lato', sans-serif;
     float: right; 
     margin: 20px; 
+    
+}
+
+.form1 {
+    display: flex; 
+    justify-content: center;
+    font-family: 'Lato', sans-serif;
+    margin: 20px;  
 }
 
 .inlog {
@@ -166,6 +230,22 @@ body {
     letter-spacing: 0.1em; 
 }
 
+.writepost {
+    display: flex;
+    flex-direction: column; 
+    max-height: 100%; 
+}
+
+.footer {
+    margin: 20px; 
+    font-size: 15px; 
+}
+
+.footer1 {
+}
+
+
+
 @media only screen and (max-width: 414px) {
 
 .quote {
@@ -177,7 +257,9 @@ body {
    
 }
 
-form {
+.form {
     float: left; 
 }
+
+
 }
