--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,12 @@ body {
     padding:0;
     height:100%;
  }
+
+ #wrapper {
+     display: flex; 
+     flex-direction: column; 
+ }
+
  #container {
     min-height:100%;
     position:relative;
@@ -91,7 +97,7 @@ h2 {
     margin-left: 2%; 
 }
 
-button {
+.submit-button {
     float: left;
     background: #B9DFFF;
     color: #fff;
@@ -102,7 +108,7 @@ button {
         
 }
         
-button:hover {
+.submit-button:hover {
     background: rgb(17, 72, 114);
     color: #fff;
     border: 1px solid #eee;
@@ -111,6 +117,43 @@ button:hover {
     text-shadow:none;
 
 }
+
+.delete-button {
+    background: #B9DFFF;
+    color: #fff;
+    border: 1px solid #eee;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
+}
+
+.delete-button:hover {
+    background: rgb(17, 72, 114);
+    color: #fff;
+    border: 1px solid #eee;
+    border-radius: 20px;    
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
+}
+
+.edit-button {
+    background: #B9DFFF;
+    color: #fff;
+    border: 1px solid #eee;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
+}
+
+.edit-button:hover {
+    background: rgb(17, 72, 114);
+    color: #fff;
+    border: 1px solid #eee;
+    border-radius: 20px;    
+    box-shadow: 5px 5px 5px #eee;
+    text-shadow:none;
+}
+
 
 .bottom-left {
     position: absolute;
@@ -139,7 +182,6 @@ body {
 
 .inlog {
     position: relative; 
-    justify-content: left;
     font-size: 1em;
     margin-right: 8px; 
 }
@@ -241,10 +283,14 @@ body {
     font-size: 15px; 
 }
 
-.footer1 {
+.card {
+text-align: center; 
+
 }
 
-
+.card-text {
+    margin: 10px; 
+}
 
 @media only screen and (max-width: 414px) {
 
