--- a/styles/style.css
+++ b/styles/style.css
@@ -1,405 +1,469 @@
-* {
-    margin: 0; 
-    padding: 0; 
+@import 'header.css';
+@import 'posts.css';
+
+body {
+  font-size: 20px;
+  color: #212529;
+  font-family: 'Lato', Arial, Helvetica, sans-serif
+}
+
+p {
+  line-height: 1.5;
+  margin: 30px 0;
+}
+
+p a {
+  text-decoration: underline;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 800;
+  font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #212529;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+a:focus, a:hover {
+  color: #0085A1;
+}
+
+blockquote {
+  font-style: italic;
+  color: #868e96;
+}
+
+.section-heading {
+  font-size: 36px;
+  font-weight: 700;
+  margin-top: 60px;
+}
+
+.caption {
+  font-size: 14px;
+  font-style: italic;
+  display: block;
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+::-moz-selection {
+  color: #fff;
+  background: #0085A1;
+  text-shadow: none;
+}
+
+::selection {
+  color: #fff;
+  background: #0085A1;
+  text-shadow: none;
+}
+
+img::selection {
+  color: #fff;
+  background: transparent;
+}
+
+img::-moz-selection {
+  color: #fff;
+  background: transparent;
+}
+
+/* * {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    margin:0;
-    padding:0;
-    height:100%;
- }
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Raleway', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
- #wrapper {
-     display: flex; 
-     flex-direction: column; 
- }
+#wrapper {
+  display: flex;
+  flex-direction: column;
+}
 
- #container {
-    min-height:100%;
-    position:relative;
- }
- #header {
-    background: rgb(255, 224, 224);
-    padding:10px;
- }
- #body {
-    padding:10px;
-    padding-bottom:60px;   /* Height of the footer */
- }
- #footer {
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:60px;   /* Height of the footer */
-    background:#6cf;
- }
+#container {
+  min-height: 100%;
+  position: relative;
+}
+
+#header {
+  background: rgb(255, 224, 224);
+  padding: 10px;
+}
+
+#body {
+  padding: 10px;
+  padding-bottom: 60px;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background: #6cf;
+}
 
 h1 {
-    font-family: 'Raleway', sans-serif;
-    letter-spacing: 3px; 
-    text-align: center; 
-    padding-top: 40px; 
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 3px;
+  text-align: center;
+  padding-top: 40px;
 }
 
 h2 {
-    font-family: 'Raleway', sans-serif;
-    text-align: center; 
-    letter-spacing: 2px; 
-    margin: 1.5em; 
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+  letter-spacing: 2px;
+  margin: 1.5em;
 }
 
 .navbar-header {
-    width: 80%;
-    position: fixed;
+  width: 80%;
+  position: fixed;
 }
 
-.lion { 
-    position: relative;
-    width: 100%; 
-    text-align: center; 
-    z-index: -1;
+.lion {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  z-index: -1;
 }
 
 .hide {
-    display: none; 
+  display: none;
 }
 
-
 .quote {
-    color: #F1AF77;
-    position: absolute; 
-    margin: 3em; 
-    font-size: 2em; 
-    font-family: Arial, Helvetica, sans-serif; 
+  color: #f1af77;
+  position: absolute;
+  margin: 3em;
+  font-size: 2em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .quote1 {
-    color: #F1AF77;
-    position: absolute; 
-    margin: 1em; 
-    font-size: 1.5em; 
-    font-family: Arial, Helvetica, sans-serif; 
-    padding-top: 100px; 
+  color: #f1af77;
+  position: absolute;
+  margin: 1em;
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 100px;
 }
 
 .username {
-    border-radius: 5px;  
-    margin-left: 20px; 
-    flex: 1; 
+  border-radius: 5px;
+  margin-left: 20px;
+  flex: 1;
 }
 
 .password1 {
-    border-radius: 5px;  
-    margin-left: 20px; 
+  border-radius: 5px;
+  margin-left: 20px;
 }
 
 .password {
-    margin-left: 2%; 
+  margin-left: 2%;
 }
 
 .signin-button {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
-
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .submit-button {
-    float: left;
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
-        
+  float: left;
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
-        
-.submit-button:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
 
+.submit-button:hover {
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .delete-link {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .edit-link {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .delete-link:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .edit-link:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .delete-button {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .delete-button:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .edit-button {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .edit-button:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .logout {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
-    float: right; 
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
+  float: right;
 }
 
-
 .logout:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
 .newpost {
-    background: #B9DFFF;
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
-    float: right; 
+  background: #b9dfff;
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
+  float: right;
 }
 
 .newpost:hover {
-    background: rgb(17, 72, 114);
-    color: #fff;
-    border: 1px solid #eee;
-    border-radius: 20px;    
-    box-shadow: 5px 5px 5px #eee;
-    text-shadow:none;
+  background: rgb(17, 72, 114);
+  color: #fff;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px #eee;
+  text-shadow: none;
 }
 
-
 .bottom-left {
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-    color: white;
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  color: white;
 }
 
 body {
-    background-color: floralwhite;
+  background-color: floralwhite;
 }
 
 .form {
-    font-family: 'Lato', sans-serif;
-    float: right; 
-    margin: 20px; 
-    
+  font-family: "Lato", sans-serif;
+  float: right;
+  margin: 20px;
 }
 
 .form1 {
-    display: flex; 
-    justify-content: center;
-    font-family: 'Lato', sans-serif;
-    margin: 20px;  
+  display: flex;
+  justify-content: center;
+  font-family: "Lato", sans-serif;
+  margin: 20px;
 }
 
 .inlog {
-    position: relative; 
-    font-size: 1em;
-    margin-right: 8px; 
+  position: relative;
+  font-size: 1em;
+  margin-right: 8px;
 }
 
-
-#primary_nav_wrap
-{
-	margin-top:15px
+#primary_nav_wrap {
+  margin-top: 15px;
 }
 
-#primary_nav_wrap ul
-{
-	list-style:none;
-	position:relative;
-	float:left;
-	margin:0;
-	padding:0
+#primary_nav_wrap ul {
+  list-style: none;
+  position: relative;
+  float: left;
+  margin: 0;
+  padding: 0;
 }
 
-#primary_nav_wrap ul a
-{
-	display:block;
-	color:#333;
-	text-decoration:none;
-	font-weight:700;
-	padding:0 15px;
-	font-family: 'Lato', sans-serif;
+#primary_nav_wrap ul a {
+  display: block;
+  color: #333;
+  text-decoration: none;
+  font-weight: 700;
+  padding: 0 15px;
+  font-family: "Lato", sans-serif;
 }
 #primary_nav_wrap ul li a:after,
 #primary_nav_wrap ul li a:before {
-    content: '|';
-    padding: 8px 10px;
+  content: "|";
+  padding: 8px 10px;
 }
 
-#primary_nav_wrap ul li
-{
-	position:relative;
-	float:left;
-	margin:0;
-	padding:0
+#primary_nav_wrap ul li {
+  position: relative;
+  float: left;
+  margin: 0;
+  padding: 0;
 }
 
-#primary_nav_wrap ul li.current-menu-item
-{
-	background:#F8EBEB
+#primary_nav_wrap ul li.current-menu-item {
+  background: #f8ebeb;
 }
 
 #primary_nav_wrap ul li.current-menu-item1 {
-    float: right;
+  float: right;
 }
 
-#primary_nav_wrap ul li:hover
-{
-	background:#F8EBEB;
+#primary_nav_wrap ul li:hover {
+  background: #f8ebeb;
 }
 
-#primary_nav_wrap ul ul
-{
-	display:none;
-	position:absolute;
-	top:100%;
-	left:0;
-	padding:0
+#primary_nav_wrap ul ul {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding: 0;
 }
 
-#primary_nav_wrap ul ul li
-{
-	float:none;
-	width:200px
+#primary_nav_wrap ul ul li {
+  float: none;
+  width: 200px;
 }
 
-#primary_nav_wrap ul ul a
-{
-	line-height:120%;
-	padding:10px 15px
+#primary_nav_wrap ul ul a {
+  line-height: 120%;
+  padding: 10px 15px;
 }
 
-#primary_nav_wrap ul ul ul
-{
-	top:0;
-	left:100%
+#primary_nav_wrap ul ul ul {
+  top: 0;
+  left: 100%;
 }
 
-#primary_nav_wrap ul li:hover > ul
-{
-	display:block
+#primary_nav_wrap ul li:hover > ul {
+  display: block;
 }
 
-.post { 
-    padding-left: 60px;
-    padding-right: 60px; 
-    font-family: 'Raleway', sans-serif;
-    letter-spacing: 0.1em; 
+.post {
+  padding-left: 60px;
+  padding-right: 60px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.1em;
 }
 
 .writepost {
-    display: flex;
-    flex-direction: column; 
-    max-height: 100%; 
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
 }
 
 .footer {
-    margin: 20px; 
-    font-size: 15px; 
+  margin: 20px;
+  font-size: 15px;
 }
 
 .card {
-text-align: center; 
+  text-align: center;
 }
 
 .post-wrapper {
-    display: flex;
-    flex-direction: column-reverse;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .card-text {
-    margin: 10px; 
+  margin: 10px;
 }
 
 @media only screen and (max-width: 414px) {
+  .quote {
+    font-size: 60%;
+  }
 
-.quote {
-    font-size: 60%; 
-}
+  .hide {
+    display: -webkit-box;
+  }
 
-.hide {
-    display: -webkit-box; 
-   
-}
-
-.form {
-    float: left; 
-}
-
-
-}
+  .form {
+    float: left;
+  }
+} */
